--- a/blogPessoal/src/main/resources/application.properties
+++ b/blogPessoal/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=*******
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost/blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+#spring.datasource.username=root
+#spring.datasource.password=*******
+#spring.jpa.show-sql=true
+
+
+###Caminho para o Deploy:
+
+spring.jpa.generate-ddl=true
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
